--- a/src/EditorFeatures/Core.Wpf/EditorFeaturesWpfResources.resx
+++ b/src/EditorFeatures/Core.Wpf/EditorFeaturesWpfResources.resx
@@ -159,4 +159,7 @@
   <data name="Gathering_Suggestions_0" xml:space="preserve">
     <value>Gathering Suggestions - '{0}'</value>
   </data>
+  <data name="Gathering_Suggestions_Waiting_for_the_solution_to_fully_load" xml:space="preserve">
+    <value>Gathering Suggestions - Waiting for the solution to fully load</value>
+  </data>
 </root>
