--- a/src/Workspaces/Core/Portable/WorkspacesResources.resx
+++ b/src/Workspaces/Core/Portable/WorkspacesResources.resx
@@ -168,6 +168,12 @@
   <data name="Adding_projects_is_not_supported" xml:space="preserve">
     <value>Adding projects is not supported.</value>
   </data>
+  <data name="Workspace_error" xml:space="preserve">
+    <value>Workspace error</value>
+  </data>
+  <data name="Error_reading_source_file_content" xml:space="preserve">
+    <value>Error reading content of source file '{0}' -- '{1}'.</value>
+  </data>
   <data name="Workspace_is_not_empty" xml:space="preserve">
     <value>Workspace is not empty.</value>
   </data>
