--- a/src/Compilers/CSharp/Portable/xlf/CSharpResources.it.xlf
+++ b/src/Compilers/CSharp/Portable/xlf/CSharpResources.it.xlf
@@ -42,11 +42,6 @@
         <target state="translated">L'attributo '{0}' non è valido nelle funzioni di accesso a eventi. È valido solo nelle dichiarazioni di '{1}'.</target>
         <note />
       </trans-unit>
-      <trans-unit id="ERR_AttributeNotOnLocalFunction">
-        <source>Attribute '{0}' is not valid on local functions.</source>
-        <target state="new">Attribute '{0}' is not valid on local functions.</target>
-        <note />
-      </trans-unit>
       <trans-unit id="ERR_AutoPropertyWithSetterCantBeReadOnly">
         <source>Auto-implemented property '{0}' cannot be marked 'readonly' because it has a 'set' accessor.</source>
         <target state="translated">La proprietà implementata automaticamente '{0}' non può essere contrassegnata come 'readonly' perché include una funzione di accesso 'set'.</target>
@@ -9571,7 +9566,7 @@ Per rimuovere l'avviso, è invece possibile usare /reference (impostare la propr
         <note />
       </trans-unit>
       <trans-unit id="ERR_LocalFunctionMissingBody">
-        <source>Local function '{0}' must either have a body or be marked 'static extern'.</source>
+        <source>Local function '{0}' must declare a body because it is not marked 'static extern'.</source>
         <target state="needs-review-translation">'{0}' è una funzione locale e deve sempre includere un corpo.</target>
         <note />
       </trans-unit>
